--- a/satpc32-dde-utils/satpc32-dde-utils.csproj
+++ b/satpc32-dde-utils/satpc32-dde-utils.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IRigController.cs" />
+    <Compile Include="Mode.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SatPC32Client.cs" />
